@@ -493,7 +493,7 @@ public class SingleNodePlanner {
       if (plan.getCardinality() == -1) {
         // use 0 for the size to avoid it becoming the leftmost input
         // TODO: Consider raw size of scanned partitions in the absence of stats.
-        candidates.add(new Pair<TableRef, Long>(ref, new Long(0)));
+        candidates.add(new Pair<TableRef, Long>(ref, Long.valueOf(0)));
         if (LOG.isTraceEnabled()) {
           LOG.trace("candidate " + ref.getUniqueAlias() + ": 0");
         }
@@ -502,7 +502,7 @@ public class SingleNodePlanner {
       Preconditions.checkState(ref.isAnalyzed());
       long materializedSize =
           (long) Math.ceil(plan.getAvgRowSize() * (double) plan.getCardinality());
-      candidates.add(new Pair<TableRef, Long>(ref, new Long(materializedSize)));
+      candidates.add(new Pair<TableRef, Long>(ref, Long.valueOf(materializedSize)));
       if (LOG.isTraceEnabled()) {
         LOG.trace(
             "candidate " + ref.getUniqueAlias() + ": " + Long.toString(materializedSize));
@@ -1360,7 +1360,7 @@ public class SingleNodePlanner {
     // if the view already has a limit, we leave it as-is otherwise we
     // apply the outer limit
     if (viewStatus != null && !viewStatus.first) {
-      inlineViewRef.getAnalyzer().setSimpleLimitStatus(new Pair<>(new Boolean(true),
+      inlineViewRef.getAnalyzer().setSimpleLimitStatus(new Pair<>(Boolean.valueOf(true),
           outerStatus.second));
     }
   }
